[package]
name = "polkadot-collator"
version = "0.7.22"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.4"
sc-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service" }
log = "0.4.8"
tokio = "0.2.10"
futures-timer = "2.0"
codec = { package = "parity-scale-codec", version = "1.1.0" }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
