[package]
name = "polkadot-rpc"
version = "0.7.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "sc-client", git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false }
