[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
polkadot-test-runtime = { path = ".." }
substrate-test-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sc-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
futures = "0.3.1"
